<resources>
    <string name="app_name">News App</string>
    <string name="news_sport">Sports News</string>
    <string name="news_seince">Science News</string>
    <string name="news_fashion">Fashion News</string>
    <string name="news_thec">Technology News</string>
    <string name="news_finance">Finance News</string>
    <string name="news_world">World News</string>
    <string name="support">Support</string>
    <string name="cat">News Categories</string>
    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>
    <string name="noConect">Check your internet connection</string>
    <string name="noNwes">No news founded!</string>
    <string name="all">All Categories</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
